--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
   </head>
   <body>
-    <div id="root"> </div>
+    <div id="root"><-!--- ::APP:: ---></div>
     <script type="text/javascript" src="bundle.js"></script>
   </body>
 </html>
